fix(project): 修复前后端接口对应失败问题并完成前端界面优化